docs: add documentation for crate opening
