# handler/response.go
@@ -5,6 +5,7 @@ import (
 	"net/http"
 
 	"github.com/gin-gonic/gin"
+	"github.com/maikondouglas/gopportunities/schemas"
 )
 
 func sendError(context *gin.Context, code int, msg string) {
@@ -21,4 +22,14 @@ func sendSuccess(context *gin.Context, op string, data interface{}) {
 		"message": fmt.Sprintf("Operation %s successfull", op),
 		"data":    data,
 	})
+}
+
+type ErrorReponse struct {
+	Message   string `json:"message"`
+	ErrorCode string `json:"errorCode"`
+}
+
+type CreagteOpeningResponse struct {
+	Message string                  `json:"message"`
+	Data    schemas.OpeningResponse `json:"data"`
 }
